CookYStories_Frontend/src/App/css/App.css
.App {
  text-align: center;
  background-color: #faf9f1;
}

.App-logo {
  height: 40vmin;
  pointer-events: none;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-link {
  color: #61dafb;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

.body {
  margin: 0px;
  background-color: #faf9f1;
}
.bg-header {
  background-color: #afd0cc;
}
.header {
  position: sticky;
  width: 100vw;
}
.footer {
  position: fixed;
  bottom: 0;
  justify-content: center;
  width: 100vw;
  height: 85px;
  background-color: white;
  overflow: hidden;
}

.navbar-brand {
  margin-top: -15px;
}

.welcomePage {
  height: 100%;
  align-items: center;
  align-content: center;
  /* /* justify-content: center;   */
  text-align: center;
  /* vertical-align: center; */
  display: flex;
  flex-flow: column;
}

.slideImage {
  object-fit: contain;
}

.leftColumn {
  left: 0;
  /* float: left; */
  align-content: center;
  text-align: center;
  width: 60%;
  display: table-cell;
  /* background-color: #444555; */
}

.rightColumn {
  left: 0;
  text-align: center;
  vertical-align: middle;
  width: 40%;
  display: table-cell;
  background-color: #faf9f1;
  justify-content: end;
}

.row {
  display: table;
  vertical-align: middle;
  height: 100%;
  border-spacing: 0;
  width: 100vw;
  background-color: #faf9f1;
}

